--- a/Closer-Look-at-DeFi-contracts-Insurance/package.json
+++ b/Closer-Look-at-DeFi-contracts-Insurance/package.json
@@ -11,5 +11,8 @@
     "dotenv": "^16.0.3",
     "ethereum-waffle": "3.4.4",
     "ethers": "5.7.2"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT"
 }
