--- a/Solidity-Smart-Contract-SecurityAudits/package.json
+++ b/Solidity-Smart-Contract-SecurityAudits/package.json
@@ -10,5 +10,9 @@
     "dotenv": "^16.0.3",
     "ethereum-waffle": "3.4.4",
     "ethers": "5.7.2"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "Kings",
+  "license": "MIT"
 }
