--- a/Advanced-Solidity-Concepts-AccountAbstraction/package.json
+++ b/Advanced-Solidity-Concepts-AccountAbstraction/package.json
@@ -1,73 +1,44 @@
 {
-  
   "name": "account-abstraction",
-  
   "private": true,
-  
   "version": "0.0.0",
-  
   "type": "commonjs",
-  
   "scripts": {
-  
-    
-  "dev": "vite",
-  
-    
-  "build": "vite build",
-  
-    
-  "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-  
-    
-  "preview": "vite preview"
-  
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  
   "dependencies": {
-  
-    
-  "@gnosis.pm/safe-contracts": "^1.3.0",
-  
-    
-  "@nomiclabs/hardhat-waffle": "^2.0.5",
-  
-    
-  "@openzeppelin/contracts": "^4.8.0",
-  
-    
-  "@truffle/hdwallet-provider": "^2.1.5",
-  
-    
-  "dotenv": "^16.0.3",
-  
-    
-  "process": "^0.11.10",
-  
-    
-  "react": "^18.2.0",
-  
-    
-  "solc": "^0.8.19",
-  
-    
-  "truffle-hdwallet-provider": "^1.0.17",
-  
-    
-  "web3": "^1.8.1"
-  
+    "@gnosis.pm/safe-contracts": "^1.3.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
+    "@openzeppelin/contracts": "^4.8.0",
+    "@truffle/hdwallet-provider": "^2.1.5",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^10.0.6",
+    "chai": "^4.2.0",
+    "dotenv": "^16.0.3",
+    "hardhat-gas-reporter": "^1.0.8",
+    "process": "^0.11.10",
+    "react": "^18.2.0",
+    "solc": "^0.8.19",
+    "solidity-coverage": "^0.8.1",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.1.0",
+    "typescript": "^5.3.3",
+    "web3": "^1.8.1"
   },
-  
   "devDependencies": {
-  
-    
-  "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-  
-    
-  "@nomiclabs/hardhat-etherscan": "^3.1.7",
-  
-    
-  "hardhat": "^2.13.0"
-  
-  }
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "hardhat": "^2.13.0"
+  },
+  "main": "index.js",
+  "author": "Kings",
+  "license": "MIT"
 }
